--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -315,6 +315,7 @@
     <Compile Include="DataEditors\TextInput\AutocompleteConfigurationField.cs" />
     <Compile Include="DataEditors\TextInput\MaxCharsConfigurationField.cs" />
     <Compile Include="DataEditors\TextInput\TextInputDataListEditor.cs" />
+    <Compile Include="DataEditors\Buttons\ButtonsDataListEditor.cs" />
     <Compile Include="DataEditors\_\ConfigurationFields\HtmlAttributesConfigurationField.cs" />
     <Compile Include="Core\DictionaryExtensions.cs" />
     <Compile Include="Experience\DisablePreviewComponent.cs" />
@@ -428,6 +429,7 @@
     <None Include="Web\UI\App_Plugins\Contentment\package.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DataEditors\Buttons\buttons.css" />
     <Content Include="DataEditors\Bytes\bytes.js" />
     <Content Include="DataEditors\Cards\cards.css" />
     <Content Include="DataEditors\Cards\cards.html" />
@@ -480,6 +482,8 @@
     <Content Include="DataEditors\RadioButtonList\radio-button-list.js" />
     <Content Include="DataEditors\RenderMacro\render-macro.html" />
     <Content Include="DataEditors\RenderMacro\render-macro.js" />
+    <Content Include="DataEditors\Buttons\buttons.html" />
+    <Content Include="DataEditors\Buttons\buttons.js" />
     <Content Include="DataEditors\Toggles\toggles.html" />
     <Content Include="DataEditors\Toggles\toggles.js" />
     <Content Include="DataEditors\_\readonly-node-preview.html" />
