DataList ValueConverter - even more strongly-typed support
With this, the data source can specify the Type of the value.
e.g. EnumDataListSource will return the actual Enum value.

This introduces a new interface, (so not to overload `IDataSource` itself).

I blame @mattbrailsford for nerdsnipping me! :wink: :heart:

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -298,6 +298,7 @@
     <Compile Include="DataEditors\ContentBlocks\ContentBlocksDisplayModeConfigurationField.cs" />
     <Compile Include="Composing\ContentmentListItemCollectionBuilder.cs" />
     <Compile Include="DataEditors\DataList\DataSources\FontAwesomeDataSource.cs" />
+    <Compile Include="DataEditors\DataList\DataSources\IDataListSourceValueConverter.cs" />
     <Compile Include="DataEditors\DataList\DataSources\JsonDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\PhysicalFileSystemDataSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\SqlDataListSource.cs" />
