Abstracted out `IContentmentListItem` to `IContentmentEditorItem`
I'm trying to keep `IContentmentListItem` as slim as possible.
The `Fields` and `DefaultValues` didn't make sense for future
Contentment list items - they would be "editor" specific.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -321,6 +321,7 @@
     <Compile Include="DataEditors\_\ConfigurationFields\HtmlAttributesConfigurationField.cs" />
     <Compile Include="Core\DictionaryExtensions.cs" />
     <Compile Include="DataEditors\_\ConfigurationFields\ShowIconsConfigurationField.cs" />
+    <Compile Include="DataEditors\_\IContentmentEditorItem.cs" />
     <Compile Include="Experience\DisablePreviewComponent.cs" />
     <Compile Include="Experience\HidePropertyLabelComponent.cs" />
     <Compile Include="Experience\MarkdownPropertyDescriptionComponent.cs" />
