--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: Umbraco Community forum
     url: https://our.umbraco.com/
-    about: "For support questions, please use the Umbraco Community forum. This repository's issues are reserved for bug reports and feature requests."
+    about: "For community (free) support questions, please use the Umbraco Community forum."
+  - name: "Commericial support"
+    url: https://umbrellainc.co.uk/
+    about: "For commerical (paid) support questions, please contact me via my company, Umbrella."
