[WIP] New Data List editor "Templated List"
This is a prototype.

Let's the user enter their own AngularJS template markup,
which is then rendered when looping over the data source.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -310,6 +310,7 @@
     <Compile Include="DataEditors\DataList\DataSources\UserDefinedDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\XmlDataListSource.cs" />
     <Compile Include="DataEditors\NumberInput\NumberInputDataEditor.cs" />
+    <Compile Include="DataEditors\TemplatedList\TemplatedListDataListEditor.cs" />
     <Compile Include="DataEditors\TextInput\TextInputValueConverter.cs" />
     <Compile Include="DataEditors\TextInput\PrependIconConfigurationField.cs" />
     <Compile Include="DataEditors\TextInput\AppendIconConfigurationField.cs" />
@@ -451,6 +452,8 @@
     <Content Include="DataEditors\ContentBlocks\content-blocks.css" />
     <Content Include="DataEditors\NumberInput\number-input.html" />
     <None Include="DataEditors\ReadOnly\README.md" />
+    <Content Include="DataEditors\TemplatedList\templated-list.js" />
+    <Content Include="DataEditors\TemplatedList\templated-list.html" />
     <Content Include="DataEditors\TextInput\text-input.css" />
     <Content Include="DataEditors\TextInput\text-input.html" />
     <Content Include="DataEditors\TextInput\text-input.js" />
