--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -299,6 +299,7 @@
     <Compile Include="Configuration\ContentmentVersion.cs" />
     <Compile Include="Core\Trees\TreeCollectionBuilderExtensions.cs" />
     <Compile Include="DataEditors\ConfigurationEditor\ConfigurationEditorUtility.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksDisplayModeConfigurationField.cs" />
     <Compile Include="Composing\ContentmentListItemCollectionBuilder.cs" />
     <Compile Include="DataEditors\DataList\IDataListSourceValueConverter.cs" />
     <Compile Include="DataEditors\DataList\DataSources\JsonDataListSource.cs" />
@@ -338,6 +339,14 @@
     <Compile Include="DataEditors\DataTable\DataTableConfigurationEditor.cs" />
     <Compile Include="DataEditors\DataTable\DataTableDataEditor.cs" />
     <Compile Include="DataEditors\DropdownList\DropdownListDataListEditor.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentTypeCacheHelper.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksDataValueEditor.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksConfigurationEditor.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksDataEditor.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlock.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlockType.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksTypesConfigurationField.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksValueConverter.cs" />
     <Compile Include="DataEditors\_\ConfigurationFields\HideLabelConfigurationField.cs" />
     <Compile Include="DataEditors\IconPicker\DefaultIconConfigurationField.cs" />
     <Compile Include="DataEditors\IconPicker\IconPickerConfigurationEditor.cs" />
@@ -399,10 +408,17 @@
     <Content Include="DataEditors\ConfigurationEditor\configuration-editor.js" />
     <Content Include="DataEditors\ConfigurationEditor\configuration-editor.overlay.html" />
     <Content Include="DataEditors\ConfigurationEditor\configuration-editor.overlay.js" />
+    <Content Include="DataEditors\ContentBlocks\content-blocks.blueprint.html" />
     <Content Include="DataEditors\DataTable\data-table.html" />
     <Content Include="DataEditors\DataTable\data-table.js" />
     <Content Include="DataEditors\DropdownList\dropdown-list.html" />
     <Content Include="DataEditors\DropdownList\dropdown-list.js" />
+    <Content Include="DataEditors\ContentBlocks\content-blocks.html" />
+    <Content Include="DataEditors\ContentBlocks\content-list.html" />
+    <Content Include="DataEditors\ContentBlocks\content-blocks.js" />
+    <Content Include="DataEditors\ContentBlocks\content-blocks.overlay.html" />
+    <Content Include="DataEditors\ContentBlocks\content-blocks.overlay.js" />
+    <Content Include="DataEditors\ContentBlocks\content-blocks.css" />
     <Content Include="DataEditors\NumberInput\number-input.html" />
     <None Include="DataEditors\ReadOnly\README.md" />
     <Content Include="DataEditors\IconPicker\icon-picker.css" />
@@ -421,6 +437,7 @@
     <Content Include="DataEditors\RadioButtonList\radio-button-list.js" />
     <Content Include="DataEditors\RenderMacro\render-macro.html" />
     <Content Include="DataEditors\RenderMacro\render-macro.js" />
+    <Content Include="DataEditors\ReadOnly\readonly-node-preview.html" />
     <Content Include="DataEditors\_\_dev-mode.js" />
     <Content Include="DataEditors\_\_directives.js" />
     <Content Include="Web\UI\App_Plugins\Contentment\editors\_empty.html" />
