--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -374,6 +374,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trees\ContentmentTreeController.cs" />
     <Compile Include="Web\Controllers\EnumDataListSourceApiController.cs" />
+    <Compile Include="Web\PublishedCache\DetachedPublishedElement.cs" />
+    <Compile Include="Web\PublishedCache\DetachedPublishedProperty.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DataEditors\Bytes\README.md" />
