--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -317,6 +317,13 @@
     <Compile Include="DataEditors\DataList\DataSources\TextDelimitedDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\XmlDataListSource.cs" />
     <Compile Include="DataEditors\NumberInput\NumberInputDataEditor.cs" />
+    <Compile Include="DataEditors\TextInput\TextInputValueConverter.cs" />
+    <Compile Include="DataEditors\TextInput\PrependIconConfigurationField.cs" />
+    <Compile Include="DataEditors\TextInput\AppendIconConfigurationField.cs" />
+    <Compile Include="DataEditors\TextInput\PlaceholderTextConfigurationField.cs" />
+    <Compile Include="DataEditors\TextInput\AutocompleteConfigurationField.cs" />
+    <Compile Include="DataEditors\TextInput\MaxCharsConfigurationField.cs" />
+    <Compile Include="DataEditors\TextInput\TextInputDataListEditor.cs" />
     <Compile Include="DataEditors\_\ConfigurationFields\HtmlAttributesConfigurationField.cs" />
     <Compile Include="Core\DictionaryExtensions.cs" />
     <Compile Include="DataEditors\_\ConfigurationFields\ShowIconsConfigurationField.cs" />
@@ -325,6 +332,8 @@
     <Compile Include="DataEditors\_\OverlaySize.cs" />
     <Compile Include="Migrations\Install\RegisterUmbracoPackageEntry.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DataEditors\TextInput\TextInputConfigurationEditor.cs" />
+    <Compile Include="DataEditors\TextInput\TextInputDataEditor.cs" />
     <Compile Include="DataEditors\Bytes\BytesConfigurationEditor.cs" />
     <Compile Include="DataEditors\Bytes\BytesDataEditor.cs" />
     <Compile Include="DataEditors\Bytes\BytesValueConverter.cs" />
@@ -436,6 +445,9 @@
     <Content Include="DataEditors\ContentBlocks\content-blocks.css" />
     <Content Include="DataEditors\NumberInput\number-input.html" />
     <None Include="DataEditors\ReadOnly\README.md" />
+    <Content Include="DataEditors\TextInput\text-input.css" />
+    <Content Include="DataEditors\TextInput\text-input.html" />
+    <Content Include="DataEditors\TextInput\text-input.js" />
     <Content Include="DataEditors\IconPicker\icon-picker.css" />
     <Content Include="DataEditors\IconPicker\icon-picker.html" />
     <Content Include="DataEditors\IconPicker\icon-picker.js" />
