Added OverlaySize property for list-editors/data-sources
Added `OverlaySize` enum, (for small, medium, large)
Set the default size to be small across the board.
This is useful for if we wanted to have a wider overlay panel.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -313,6 +313,7 @@
     <Compile Include="DataEditors\_\IContentmentEditorItem.cs" />
     <Compile Include="Composing\ContentmentComponent.cs" />
     <Compile Include="Composing\ContentmentRunComposer.cs" />
+    <Compile Include="DataEditors\_\OverlaySize.cs" />
     <Compile Include="Migrations\Install\RegisterUmbracoPackageEntry.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DataEditors\Bytes\BytesConfigurationEditor.cs" />
@@ -326,7 +327,6 @@
     <Compile Include="DataEditors\ConfigurationEditor\ConfigurationEditorDataEditor.cs" />
     <Compile Include="DataEditors\ConfigurationEditor\ConfigurationEditorModel.cs" />
     <Compile Include="DataEditors\ConfigurationEditor\IConfigurationEditorItem.cs" />
-    <Compile Include="DataEditors\ConfigurationEditor\OverlaySizeConfigurationField.cs" />
     <Compile Include="Properties\SolutionInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="DataEditors\DataList\DataListConfigurationEditor.cs" />
