DataList - adds Umbraco Content data-source
Includes...

- a custom lightweight version of Umbraco's "treesource" editor
- a wrapper for Umbraco's internal `UmbracoXPathPathSyntaxParser` class
- extends `ContentTypeCacheHelper` to retrieve a ContentType's icon
  (IPublishedContentType doesn't have the Icon property)
- makes the Umbraco logo available to use as an icon

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -298,9 +298,12 @@
     <Compile Include="Composing\ContentmentCompositionExtensions.cs" />
     <Compile Include="Configuration\ContentmentVersion.cs" />
     <Compile Include="Core\Trees\TreeCollectionBuilderExtensions.cs" />
+    <Compile Include="Core\Xml\UmbracoXPathPathSyntaxParser.cs" />
     <Compile Include="DataEditors\ConfigurationEditor\ConfigurationEditorUtility.cs" />
     <Compile Include="DataEditors\ContentBlocks\ContentBlocksDisplayModeConfigurationField.cs" />
     <Compile Include="Composing\ContentmentListItemCollectionBuilder.cs" />
+    <Compile Include="DataEditors\ContentPicker\ContentPickerDataEditor.cs" />
+    <Compile Include="DataEditors\DataList\DataSources\UmbracoContentDataListSource.cs" />
     <Compile Include="DataEditors\DataList\IDataListSourceValueConverter.cs" />
     <Compile Include="DataEditors\DataList\DataSources\JsonDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\PhysicalFileSystemDataSource.cs" />
@@ -412,6 +415,8 @@
     <Content Include="DataEditors\ConfigurationEditor\configuration-editor.overlay.html" />
     <Content Include="DataEditors\ConfigurationEditor\configuration-editor.overlay.js" />
     <Content Include="DataEditors\ContentBlocks\content-blocks.blueprint.html" />
+    <Content Include="DataEditors\ContentPicker\content-source.html" />
+    <Content Include="DataEditors\ContentPicker\content-source.js" />
     <Content Include="DataEditors\DataTable\data-table.html" />
     <Content Include="DataEditors\DataTable\data-table.js" />
     <Content Include="DataEditors\DropdownList\dropdown-list.html" />
