--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -294,7 +294,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Composing\ContentmentBootComposer.cs" />
+    <Compile Include="Composing\ContentmentComponentComposer.cs" />
     <Compile Include="Composing\ContentmentCompositionExtensions.cs" />
     <Compile Include="Configuration\ContentmentVersion.cs" />
     <Compile Include="Core\Trees\TreeCollectionBuilderExtensions.cs" />
@@ -312,7 +312,6 @@
     <Compile Include="DataEditors\_\ConfigurationFields\ShowIconsConfigurationField.cs" />
     <Compile Include="DataEditors\_\IContentmentEditorItem.cs" />
     <Compile Include="Composing\ContentmentComponent.cs" />
-    <Compile Include="Composing\ContentmentRunComposer.cs" />
     <Compile Include="DataEditors\_\OverlaySize.cs" />
     <Compile Include="Migrations\Install\RegisterUmbracoPackageEntry.cs" />
     <Compile Include="Constants.cs" />
