Added "Code Editor" back in for v1.3.0
This reverts commit a119fe3cc00369ce7305965a274acd653ece930b.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -301,6 +301,7 @@
     <Compile Include="Configuration\ContentmentVersion.cs" />
     <Compile Include="Core\Trees\TreeCollectionBuilderExtensions.cs" />
     <Compile Include="Core\Xml\UmbracoXPathPathSyntaxParser.cs" />
+    <Compile Include="DataEditors\CodeEditor\CodeEditorValueConverter.cs" />
     <Compile Include="DataEditors\ConfigurationEditor\ConfigurationEditorUtility.cs" />
     <Compile Include="DataEditors\ContentBlocks\ContentBlockPreviewView.cs" />
     <Compile Include="DataEditors\ContentBlocks\ContentBlocksViewHelper.cs" />
