--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -305,6 +305,8 @@
     <Compile Include="DataEditors\ContentBlocks\ContentBlocksApiController.cs" />
     <Compile Include="Composing\ContentmentListItemCollectionBuilder.cs" />
     <Compile Include="DataEditors\ContentBlocks\ContentBlockPreviewModel.cs" />
+    <Compile Include="DataEditors\ContentBlocks\DisplayModes\ListDisplayMode.cs" />
+    <Compile Include="DataEditors\ContentBlocks\DisplayModes\StackDisplayMode.cs" />
     <Compile Include="DataEditors\ContentBlocks\IContentBlocksDisplayMode.cs" />
     <Compile Include="DataEditors\ContentPicker\ContentPickerDataEditor.cs" />
     <Compile Include="DataEditors\DataList\DataSources\UmbracoContentDataListSource.cs" />
