Included Danish localization file in the VS proj

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -463,6 +463,7 @@
     <Content Include="Web\UI\App_Plugins\Contentment\backoffice\contentment\index.html" />
     <Content Include="Web\UI\App_Plugins\Contentment\contentment.css" />
     <Content Include="Web\UI\App_Plugins\Contentment\contentment.js" />
+    <Content Include="Web\UI\App_Plugins\Contentment\lang\da.xml" />
     <Content Include="Web\UI\App_Plugins\Contentment\lang\en.xml" />
     <Content Include="Web\UI\backoffice-ui-shim.css" />
     <Content Include="Web\UI\backoffice.js" />
