Added "lkNodeName" AngularJS filter
This is to wrap around Umbraco's "ncNodeName" filter
(from NestedContent), taking into account that a DataList
value could be a JSON array.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -466,6 +466,7 @@
     <Content Include="DataEditors\ReadOnly\readonly-node-preview.html" />
     <Content Include="DataEditors\_\_dev-mode.js" />
     <Content Include="DataEditors\_\_components.js" />
+    <Content Include="DataEditors\_\_filters.js" />
     <Content Include="DataEditors\_\_directives.js" />
     <Content Include="Web\UI\App_Plugins\Contentment\components\list-editor.html" />
     <Content Include="Web\UI\App_Plugins\Contentment\components\stack-editor.html" />
